fix wrapping gutter widgets in small windows (need to figure out a good way to fade them off)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@9273 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -33,6 +33,7 @@
 		left: 0;
 		right: 0;
 		top: 0;
+		bottom: 0;
 		overflow: visible;
 
 		&.widgets {
@@ -41,22 +42,23 @@
 
 		.controlContainer,
 		.widgetContainer {
-			//overflow: hidden;
+			text-align: right;
 			position: absolute;
-			min-height: 32px;
+			height: 30px;
 			width: 100%;
 			background: #ffffff;
+			white-space: nowrap;
+			left: 0; right: 0;
 
 			.thumb {
-				float: right;
-				clear: left;
+				display: inline-block;
 
-				&:last-of-type {
+				&:first-of-type {
 					border: 0 solid black;
 					border-radius: 3px 0 0 3px;
 				}
 
-				&:first-of-type {
+				&:last-of-type {
 					border: 0 solid black;
 					border-radius: 0 3px 3px 0;
 				}
